# ChangeLog for media-video/konverter
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/konverter/ChangeLog,v 1.12 2008/02/18 23:16:25 ingmar Exp $

  18 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -konverter-0.6.ebuild,
  -konverter-0.92_beta1.ebuild:
  Old.

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org> konverter-0.93.ebuild:
  Fixed quoting.

*konverter-0.93 (14 Mar 2007)

  14 Mar 2007; Przemysław Maciąg <troll@gentoo.org>
  +files/konverter-0.93-pro_files.patch, +files/konverter-desktop.patch,
  +konverter-0.93.ebuild:
  Version bump (0.93). Build system was changed to qmake style - no autotools
  scripts are now available in sources. Provided .pro files sucks. Also added
  patch for desktop file.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  12 May 2005; Gregorio Guidi <greg_g@gentoo.org>
  konverter-0.92_beta1.ebuild:
  Add dependency on xine-lib (#89813).

*konverter-0.92_beta1 (19 Apr 2005)

  19 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> -konverter-0.5.ebuild,
  +konverter-0.92_beta1.ebuild:
  new upstream version, fixes #58534

  03 Jul 2004; Carsten Lohrke <carlo@gentoo.org> konverter-0.5.ebuild,
  konverter-0.6.ebuild:
  QA: need-kde after R/DEPEND

  12 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> konverter-0.6.ebuild:
  marked ~amd64

*konverter-0.6 (04 Apr 2004)

  04 Apr 2004; Dominik Stadler <centic@gentoo.org> konverter-0.6.ebuild:
  Add ebuild for new Version 0.6

  19 Mar 2004; David Holm <dholm@gentoo.org> konverter-0.5.ebuild:
  Added to ~ppc.

*konverter-0.5 (18 Mar 2004)

  18 Mar 2004; Dominik Stadler <centic@gentoo.org> konverter-0.5.ebuild:
  New ebuild, thanks to Corey Quilliam <cquilliam@thegoodtimes.ca>, see Bug
  44298.
